- Merginng sendelpfile (from eXe/external) and Block upload  logic to better maintain export process.
- External API /sendelpfile/ supports epub for uploads because it is using the same method.
- Fixed bug #20 : https://github.com/UstadMobile/UMCloudDj-Code/issues/20
- Upload resume, download, jobs, etc with eXe. (/blockupload/)
- Delete unused and commented /list and /sendelpfile bits
- To Do: Update block logic needs refining
- To Do: Update Package URL field with epub exported url instead.
- To Do: Update unit tests.
- To Do: Consider Per User chunk Upload directory

v0.9.98
- Fix for Issue #16 https://github.com/UstadMobile/UMCloudDj-Code/issues/16
- Fix for Issue #17 https://github.com/UstadMobile/UMCloudDj-Code/issues/17

v0.9.97
- Added universal basic http authentication for all opds requests and not using Django's authentication based on cookies.
  This will help make requests that are cookie independent and easier on the app side. 

v0.9.96
- Fixed issue #12 : https://github.com/UstadMobile/UMCloudDj-Code/issues/12
  Issue was Django forms needed to be stated which fields were mandatory or not in the forms.
- Ignoring .coverage file

v0.9.95
- Added database backup script and steps
- initial opds testing and output for opds root, assigned_courses, course's blocks acquisition feed
- Updated server setup script to install ant

v0.9.94
- Fixes to Registration report and formatting.
- Updated report to throw more information on activity ids to help with question mapping.

v0.9.93
- Fix for issue #10: https://github.com/UstadMobile/UMCloudDj-Code/issues/10
- Fix for issue #6: https://github.com/UstadMobile/UMCloudDj-Code/issues/6

v0.9.92
- Updated deployment script to set up the server to run under wsgi and apache2
- Fixed a bug in block upload when run under apache2.
- Fixed logging bug in assigned_courses
- Updated locust for student user case.

v0.9.8