@@ -37,7 +37,7 @@ tin can id is set as well
 """
 class Package(models.Model):
    elpid = models.CharField(max_length=200)
-   exefile = models.FileField(upload_to=get_file_path, max_length=500) #saves as a unique id.
+   exefile = models.FileField(upload_to=get_file_path, max_length=600) #saves as a unique id.
    name = models.CharField(max_length=200)
    #elpname = models.CharField(max_length=200)
    pub_date = models.DateTimeField(auto_now_add=True) #added by Varuna Singh
